[project]
requires-python = "==3.13.*"
name = "container-poetry"
description = "Container images containing Poetry"
version = "3.0.1"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "commitizen ==4.1.0",
    "pre-commit >4, <5",
]

[tool.poetry]
package-mode = false

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
