[project]
requires-python = "==3.14.*"
name = "container-poetry"
description = "Container images containing Poetry"
version = "4.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "commitizen ==4.9.1",
    "pre-commit >=4.0.0, <5.0.0",
]

[tool.uv]
package = false

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
